# USTB-Term-Assignments

./: .gitignore  .gitmodules  README.md
AIF-Schuller/: .gitignore  main-base.bib  main-biblatex.tex  sample-base.bib
AutomaticControlTheory/: .gitignore  AGENT.md
AutomaticControlTheory/exp1/: README.md  REPORT.md  exp1.m  model.slx
AutomaticControlTheory/exp2/: README.md  REPORT.md  exp2.m
AutomaticControlTheory/exp3/: README.md  REPORT.md  exp3.m
CppProgramming/: CppProgramming.sln  CppProgramming.vcxproj  Main.cpp
CppProgramming/Calculator/: Calculator.sln  Calculator.vcxproj  REPORT.md
CppProgramming/OOP/: OOP.sln  OOP.vcxproj  OOP.vcxproj.filters  REPORT.md
CppProgramming/OOP2/: OOP2.sln  OOP2.vcxproj  OOP2.vcxproj.filters  REPORT.md
CppProgramming/RaylibTest/: REPORT.md  RaylibTest.sln  RaylibTest.vcxproj  RaylibTest.vcxproj.filters
CppProgramming/SortingAlgorithm/: REPORT.md  SortingAlgorithm.sln  SortingAlgorithm.vcxproj  SortingAlgorithm.vcxproj.filters
DataStructure/: go.mod
DataStructure/cmd/: week2_test.go  week3_test.go
DataStructure/pkg/: data_type.go
LinearAlgebra/: Main.py  Report.md
PatternRecognition/: e1_bayes_classifier.py  e2_minimum_risk.py  e3_nonparametric_estimation.py  e4_fisher_classifier.py  pyproject.toml
PythonProgramming/: .gitignore  InterestBasic_Huang.ipynb  InterestBasic_Yuan.ipynb  python-project-template.tex
SignalAndSystem/: exp1.m  exp1.md  exp1.py  exp2.m  exp2.md  exp2.py  exp3.m  exp3.md  exp3.py  pyproject.toml
SmartInteractionAndMixedReality/: HW1.md  HW2.md  HW3.md  HW4.md
(+91 files in other folders)
