[project]
name = "signalandsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Harry Huang",email = "harryhuang2652@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
